compiler/src/test/resources/golden/errors/const_forward_ref.dawn
const A: Int = B
const B: Int = 1
