compiler/src/test/resources/golden/errors/const_forward_ref.err
error: undefined constructor: B
  --> const_forward_ref.dawn:1:16
  |
1 | const A: Int = B
  |                ^
  = hint: const `B` is declared later in the file; constants are evaluated top to bottom
